kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/valid/021_fsm_quicktest.kmt
/* $Id: 021_fsm_quicktest.kmt,v 1.2 2006-12-20 15:05:13 dvojtise Exp $
 * Creation date: November 10, 2006
 * License:	EPL
 * Authors:
 * 		Didier Vojtisek
 */
@mainClass "fsm::Main"
@mainOperation "main"


package fsm;
require "021_minimization.kmt"
require "021_mandstart_fsm_type.kmt"
require "021_multstart_fsm_type.kmt"
require "021_composite_fsm_type.kmt"
require "021_finalstates_fsm_type.kmt"


require kermeta
class Main
{
    operation main() : Void is do 
    	// the one which aren't commented should work
		Minimizer<basic_fsm>.new.minimizeAll(basic_fsm.new)
		Minimizer<mandstart_fsm>.new.minimizeAll(mandstart_fsm.new)
	    //Minimizer<multstart_fsm>.new.minimizeAll(multstart_fsm.new)  // not conformant because upper bound 1 cannot be bound to a collection and vice versa
		Minimizer<finalstates_fsm>.new.minimizeAll(finalstates_fsm.new)
		Minimizer<composite_fsm>.new.minimizeAll(composite_fsm.new)
    end
}