kermeta_projects/fr.irisa.triskell.kermeta.io/test/typechecher_tests/invalid/021_fsm_mustfail2.kmt
/* $Id: 021_fsm_mustfail2.kmt,v 1.1 2006-12-13 08:08:25 dvojtise Exp $
 * Creation date: November 10, 2006
 * License:
 * Copyright:
 * Authors:
 */
@mainClass "fsm::Main"
@mainOperation "main"


package fsm;
require "minimization2.kmt"
require "../kermeta/mandstart_fsm_type.kmt"
require "../kermeta/multstart_fsm_type.kmt"
require "../kermeta/composite_fsm_type.kmt"
require "../kermeta/finalstates_fsm_type.kmt"


require kermeta
class Main
{
    operation main() : Void is do 
		Minimizer<basic_fsm>.new.minimizeAll(basic_fsm.new)
		//Minimizer<mandstart_fsm>.new.minimizeAll(mandstart_fsm.new)
	    Minimizer<multstart_fsm>.new.minimizeAll(multstart_fsm.new)
		Minimizer<finalstates_fsm>.new.minimizeAll(finalstates_fsm.new)
		Minimizer<composite_fsm>.new.minimizeAll(composite_fsm.new)
    end
}